# auth-service

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.qoder/plans/: Auth_UI_Implementation_33691350.md
.qoder/repowiki/en/content/: Configuration Management.md  Contributing Guide.md  Getting Started.md  Skill System and Extensions.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Data Structures.md  Dependency Management.md  Device Interface.md
.qoder/repowiki/en/content/Advanced Topics/: Advanced Topics.md  Database Configuration and Connection Management.md  Debugging and Profiling.md  Error Handling and Recovery.md  Monitoring and Observability.md  Performance Optimization.md  Security and Compliance.md
.qoder/repowiki/en/content/Agent Types and Usage/: Agent Types and Usage.md  Android Agent.md  Electron Agent.md  HarmonyOS Agent.md  Web Agent.md  iOS Agent.md
.qoder/repowiki/en/content/Core Concepts/: AI Integration and Planning.md  Agent Architecture.md  Configuration Management.md  Core Concepts.md  Data Models and Pydantic Integration.md  Service Architecture.md  (+2 more)
.qoder/repowiki/en/meta/: repowiki-metadata.json
app/USER/: UserPydanticModel.py  UserRoute.py  UserService.py  __init__.py
app/config/: __init__.py  db.py
app/dependency/: __init__.py  dependecies.py
app/models/: __init__.py  user_model.py
app/services/: __init__.py  email_service.py  hash_service.py  jwt_service.py  otp_service.py  password_hash.py
(+28 files in other folders)
